--- a/Connections/Incoming/6x04.md
+++ b/Connections/Incoming/6x04.md
@@ -1,1 +1,47 @@
+📑 **Связи для блока `6.4 Аудит логов` (`audit_logger`)**
+📦 Пакет: `6. Безопасность`
 
+---
+
+### 🔻 Исходящие связи (`audit_logger --> X`)
+
+| Целевой блок        | Назначение                                           |
+| ------------------- | ---------------------------------------------------- |
+| `structured_logger` | Централизованная передача аудита в лог-пайплайн      |
+| `ci_cd_runner`      | Аудит тестов и развёртываний                         |
+| `schema_evolver`    | Логирование DDL-событий и эволюции                   |
+| `access_control`    | Запись успешных/неуспешных авторизаций               |
+| `rbac_abac_engine`  | Аудит назначения и проверки ролей                    |
+| `row_col_security`  | Логирование срабатывания политик доступа             |
+| `sql_executor`      | Фиксация DML/DDL операций                            |
+| `rest_api`          | Запись REST-запросов и их ответов                    |
+| `graphql_api`       | Аудит GraphQL-запросов и разрешений                  |
+| `grpc_interface`    | Аудит gRPC вызовов                                   |
+| `external_hooks`    | Логирование внешних вызовов                          |
+| `tls_mtls_jwt`      | События handshake, token fail, trusted cert rejected |
+| `unit_test_engine`  | Проверка наличия аудита в тестах                     |
+
+---
+
+### 🔺 Входящие связи (`X --> audit_logger`)
+
+| Источник               | Назначение                                                      |
+| ---------------------- | --------------------------------------------------------------- |
+| `config_loader`        | Конфигурация аудита: каналы, уровни, поля                       |
+| `bootstrap_controller` | Включение аудита в фазе запуска                                 |
+| `logger`               | Перенаправление аудита в stdout/syslog/binary при необходимости |
+
+---
+
+### 🧩 Всего связей: **15**
+
+* Исходящие: **13**
+* Входящие: **3**
+
+---
+
+✅ Блок `6.4 Аудит логов` обеспечивает:
+
+* Поддержку **DML, DDL, auth, access, API** событий;
+* Интеграцию с observability, тестами, безопасностью;
+* Адаптивное логирование: JSON, syslog, binary-chain.
