--- a/Connections/Incoming/6x05.md
+++ b/Connections/Incoming/6x05.md
@@ -1,1 +1,45 @@
+🔐 **Связи для блока `6.5 Политики доступа` (`access_policies`)**
+📦 Пакет: `6. Безопасность`
 
+---
+
+### 🔻 Исходящие связи (`access_policies --> X`)
+
+| Целевой блок       | Назначение                                         |
+| ------------------ | -------------------------------------------------- |
+| `rbac_abac_engine` | Правила на основе атрибутов, групп, ролей          |
+| `row_col_security` | Политики для фильтрации строк и маскировки колонок |
+| `quota_manager`    | Условия ограничений по времени, CPU, памяти        |
+| `access_control`   | Предикаты доступа, проверка выражений              |
+| `sql_optimizer`    | Применение политик на стадии оптимизации           |
+| `sql_executor`     | Уточнение условий WHERE / JOIN по политике         |
+| `graphql_api`      | Динамические ограничения видимости данных          |
+| `rest_api`         | Отсечение недопустимых атрибутов и путей           |
+| `external_hooks`   | Динамическая подгрузка политик извне (hook-based)  |
+| `schema_evolver`   | Проверка на валидность политик при изменении схемы |
+| `unit_test_engine` | Тесты на корректность и непротиворечивость правил  |
+| `dsl_engine`       | Валидация предикатов в бизнес DSL-сценариях        |
+
+---
+
+### 🔺 Входящие связи (`X --> access_policies`)
+
+| Источник        | Назначение                                      |
+| --------------- | ----------------------------------------------- |
+| `config_loader` | Загрузка YAML/JSON/DSL описаний политик доступа |
+| `platform_init` | Интеграция с движком политик на уровне системы  |
+
+---
+
+### 🧩 Всего связей: **14**
+
+* Исходящие: **12**
+* Входящие: **2**
+
+---
+
+✅ Блок `6.5 Политики доступа` реализует:
+
+* Единый движок политик: строки, сессии, API, лимиты;
+* Интеграцию с RBAC/ABAC, QUOTA, SQL, DSL;
+* Поддержку декларативного и программируемого подхода.
