--- a/Connections/Incoming/6x06.md
+++ b/Connections/Incoming/6x06.md
@@ -1,1 +1,45 @@
+🛡 **Связи для блока `6.6 Защита от SQL-инъекций` (`sql_injection_guard`)**
+📦 Пакет: `6. Безопасность`
+
+---
+
+### 🔻 Исходящие связи (`sql_injection_guard --> X`)
+
+| Целевой блок       | Назначение                                           |
+| ------------------ | ---------------------------------------------------- |
+| `sql_parser`       | Предобработка и валидация перед разбором             |
+| `sql_executor`     | Runtime-проверки на аномалии и шаблоны атак          |
+| `audit_logger`     | Логирование подозрительных запросов и инцидентов     |
+| `access_control`   | Поддержка deny-политик по шаблонам инъекций          |
+| `rest_api`         | Фильтрация и экранирование user-input параметров     |
+| `graphql_api`      | Контроль за вложенными и манипулируемыми запросами   |
+| `etl_engine`       | Проверка шаблонов при загрузке внешних SQL-выражений |
+| `udf_engine`       | Валидация вызовов UDF с параметрами из SQL           |
+| `dsl_engine`       | Обнаружение встроенных SQL в пользовательских DSL    |
+| `unit_test_engine` | Наличие тестов на SQL-инъекции и negative cases      |
+
+---
+
+### 🔺 Входящие связи (`X --> sql_injection_guard`)
+
+| Источник        | Назначение                                                  |
+| --------------- | ----------------------------------------------------------- |
+| `config_loader` | Загрузка правил обнаружения (regex, AST, evasion patterns)  |
+| `platform_init` | Инициализация движка защиты при запуске                     |
+| `logger`        | Уровень реакции: предупреждение, блокировка, журналирование |
+
+---
+
+### 🧩 Всего связей: **13**
+
+* Исходящие: **10**
+* Входящие: **3**
+
+---
+
+✅ Блок `6.6 Защита от SQL-инъекций` обеспечивает:
+
+* Интеграцию на уровне парсера, API, DSL, ETL;
+* Поддержку сигнатур, эвристик, AST-анализов;
+* Связь с аудитом, доступом и тестированием.
 
