--- a/Connections/Incoming/6x07.md
+++ b/Connections/Incoming/6x07.md
@@ -1,1 +1,50 @@
+🔐 **Связи для блока `6.7 Управление доступом (RBAC)` (`access_control`)**
+📦 Пакет: `6. Безопасность`
 
+---
+
+### 🔻 Исходящие связи (`access_control --> X`)
+
+| Целевой блок       | Назначение                                       |
+| ------------------ | ------------------------------------------------ |
+| `sql_executor`     | Проверка прав на выполнение DML/DDL              |
+| `sql_parser`       | Проверка привилегий на уровне токенов/объектов   |
+| `rest_api`         | Аутентификация и авторизация доступа к маршрутам |
+| `graphql_api`      | Фильтрация и отбрасывание недоступных сущностей  |
+| `grpc_interface`   | Верификация ролей и разрешений перед выполнением |
+| `rbac_abac_engine` | Делегирование логики вычисления ролей            |
+| `audit_logger`     | Логирование доступа и нарушений политик          |
+| `access_policies`  | Валидация, предикаты, наложенные ограничения     |
+| `quota_manager`    | Контроль ограничений, зависящих от ролей         |
+| `row_col_security` | Применение ролей для строковых/колоночных масок  |
+| `udf_engine`       | Проверка вызовов UDF на разрешения               |
+| `pl_lang_runtime`  | Валидация exec hooks, триггеров, процедур        |
+| `json_api`         | Проверка на доступ к REST-подмножествам          |
+| `cli_shell`        | Авторизация команд CLI по ролям                  |
+| `dsl_engine`       | Ограничение выполнения сценариев по ролям        |
+
+---
+
+### 🔺 Входящие связи (`X --> access_control`)
+
+| Источник        | Назначение                            |
+| --------------- | ------------------------------------- |
+| `tls_mtls_jwt`  | Передача декодированных ролей из JWT  |
+| `config_loader` | Загрузка конфигурации ролей и прав    |
+| `platform_init` | Инициализация доступа по умолчанию    |
+| `logger`        | Уровень логирования доступа и отказов |
+
+---
+
+### 🧩 Всего связей: **19**
+
+* Исходящие: **15**
+* Входящие: **4**
+
+---
+
+✅ Блок `6.7 Управление доступом (RBAC)` — ключевой:
+
+* Обеспечивает контроль на уровне SQL, API, CLI, UDF;
+* Глубоко связан с политиками, безопасностью строк/колонок, журналами;
+* Важен для мульти-арендности, администрирования, соблюдения норм (GDPR/SOX/PCI).
