--- a/Connections/Incoming/6x08.md
+++ b/Connections/Incoming/6x08.md
@@ -1,1 +1,49 @@
+📦 **Связи для блока `6.8 Менеджер квот / Multi-tenant` (`quota_manager`)**
+📁 Пакет: `6. Безопасность`
+🏷️ Тэг: `<<Quota>>`
 
+---
+
+### 🔻 Исходящие связи (`quota_manager --> X`)
+
+| Целевой блок           | Назначение ограничения или мониторинга                                 |
+| ---------------------- | ---------------------------------------------------------------------- |
+| `sql_executor`         | Лимит CPU/IOPS/memory на уровне сессии/пользователя                    |
+| `vectorized_executor`  | Контроль использования ресурсов на операторах                          |
+| `plan_cache`           | Размер кэша планов в пределах квоты                                    |
+| `buffer_pool`          | Использование памяти в пределах квоты                                  |
+| `cdc_streaming`        | Лимит на объем и частоту передачи данных                               |
+| `etl_engine`           | Ограничение одновременных загрузок и использования памяти              |
+| `rest_api`             | Rate-limit и токен-лимиты для REST-запросов                            |
+| `graphql_api`          | Лимит глубины, вложенности, количества запросов                        |
+| `access_control`       | Применение ограничений в рамках ролей и политик                        |
+| `multi_tenant_limiter` | Интеграция с глобальными и локальными ограничениями для каждого tenant |
+| `audit_logger`         | Логирование превышений квот, попыток обхода, событий блокировки        |
+
+---
+
+### 🔺 Входящие связи (`X --> quota_manager`)
+
+| Источник               | Назначение инициализации и конфигурации                  |
+| ---------------------- | -------------------------------------------------------- |
+| `config_loader`        | Загрузка квот (CPU, память, IOPS, количество соединений) |
+| `bootstrap_controller` | Инициализация лимитов на системном уровне                |
+| `access_policies`      | Условные правила, активирующие квоты                     |
+| `rbac_abac_engine`     | Назначение квот через роли и абстрактные политики        |
+
+---
+
+### 🧩 Всего связей: **15**
+
+* Исходящие: **11**
+* Входящие: **4**
+
+---
+
+✅ Блок `6.8 Менеджер квот / Multi-tenant`:
+
+* Позволяет **гарантировать изоляцию ресурсов** между арендаторами;
+* **Предотвращает ресурсные атаки** (например, неограниченные ETL/CDC-запросы);
+* Поддерживает гибкое применение через **RBAC/ABAC/Policy Engine**;
+* Строго рекомендуется для **промышленного multi-tenant** режима;
+* Работает совместно с `multi_tenant_limiter` (1.16), но выполняет активный контроль.
