--- a/Connections/Incoming/7x01.md
+++ b/Connections/Incoming/7x01.md
@@ -1,1 +1,50 @@
+📦 **Связи для блока `7.1 Prometheus-экспортер` (`prometheus_exporter`)**
+📁 Пакет: `7. Observability и DevOps`
+
+---
+
+### 🔻 Исходящие связи (`prometheus_exporter --> X`)
+
+| Целевой блок       | Назначение метрик, экспортируемых в Prometheus |
+| ------------------ | ---------------------------------------------- |
+| `page_cache`       | Метрики LRU/ARC, hit/miss rate                 |
+| `buffer_pool`      | Использование, грязные страницы, eviction      |
+| `sql_executor`     | Latency, throughput, ошибки выполнения         |
+| `plan_cache`       | Размер кэша, количество планов                 |
+| `cdc_streaming`    | Объем и частота стриминга                      |
+| `etl_engine`       | Статистика по batch job’ам                     |
+| `rest_api`         | Latency, код возврата, частота                 |
+| `grpc_interface`   | Статистика gRPC вызовов                        |
+| `raft_engine`      | Статус реплик, lag, heartbeat                  |
+| `snapshot_manager` | Длительность и частота snapshot                |
+| `recovery_service` | Время восстановления, ошибки                   |
+| `wal_manager`      | Размер WAL, записи в секунду                   |
+| `ci_cd_runner`     | Статус и метрики CI/CD задач                   |
+| `tracing_agent`    | Отправка trace-меток для построения timeline   |
+
+---
+
+### 🔺 Входящие связи (`X --> prometheus_exporter`)
+
+| Источник               | Назначение инициализации и публикации                   |
+| ---------------------- | ------------------------------------------------------- |
+| `config_loader`        | Загрузка параметров экспорта: порты, метрики, интервалы |
+| `platform_init`        | Инициализация службы наблюдения                         |
+| `bootstrap_controller` | Регистрация экспортера в контроллере запуска            |
+
+---
+
+### 🧩 Всего связей: **16**
+
+* Исходящие: **13**
+* Входящие: **3**
+
+---
+
+✅ Блок `7.1 Prometheus-экспортер`:
+
+* Критически важен для **мониторинга в production**;
+* Связан с широким спектром модулей: **storage, execution, replication**;
+* В связке с `opentelemetry_tracer` и `structured_logger` обеспечивает **полную observability-платформу**;
+* Метрики должны быть **структурированы и иерархически организованы**.
 
