--- a/Connections/Incoming/7x02.md
+++ b/Connections/Incoming/7x02.md
@@ -1,1 +1,46 @@
+📦 **Связи для блока `7.2 Трейсинг (OpenTelemetry)` (`opentelemetry_tracer`)**
+📁 Пакет: `7. Observability и DevOps`
 
+---
+
+### 🔻 Исходящие связи (`opentelemetry_tracer --> X`)
+
+| Целевой блок           | Назначение трассировки (span / context propagation)    |
+| ---------------------- | ------------------------------------------------------ |
+| `sql_executor`         | Трассировка каждого запроса: plan → execution → result |
+| `sql_planner`          | Время планирования, ошибки                             |
+| `sql_optimizer`        | Время на оптимизацию, статистика                       |
+| `vectorized_executor`  | Отображение операций на операторах в flamegraph        |
+| `streaming_aggregator` | Трассировка long-running aggregation                   |
+| `grpc_interface`       | Связывание внешних вызовов с внутренними событиями     |
+| `rest_api`             | Трассировка HTTP-запросов, ID цепочек                  |
+| `cdc_streaming`        | Связывание стриминга с источниками и подписчиками      |
+| `raft_engine`          | Мониторинг событий репликации / лидерства              |
+| `tracing_agent`        | Отправка и маршрутизация trace-информации              |
+| `audit_logger`         | Создание трассируемого лога событий безопасности       |
+
+---
+
+### 🔺 Входящие связи (`X --> opentelemetry_tracer`)
+
+| Источник               | Назначение инициализации, настройки экспорта               |
+| ---------------------- | ---------------------------------------------------------- |
+| `config_loader`        | Параметры экспорта (Jaeger/Zipkin/OTLP), фильтры, sampling |
+| `platform_init`        | Инициализация агентов трассировки                          |
+| `bootstrap_controller` | Регистрация трассировки в системе наблюдаемости            |
+
+---
+
+### 🧩 Всего связей: **14**
+
+* Исходящие: **11**
+* Входящие: **3**
+
+---
+
+✅ Блок `7.2 Трейсинг (OpenTelemetry)`:
+
+* Обеспечивает **end-to-end трассировку** от API до исполнения и обратной связи;
+* Ключевой компонент для **latency analysis**, **debugging**, **service map**;
+* Работает в связке с `flamegraph_profiler`, `tracing_agent` и `prometheus_exporter`;
+* Поддерживает **контекст исполнения** (trace/span ID) на всех слоях.
