--- a/Connections/Incoming/7x03.md
+++ b/Connections/Incoming/7x03.md
@@ -1,1 +1,46 @@
+📦 **Связи для блока `7.3 Профилировщик (Flamegraph)` (`flamegraph_profiler`)**
+📁 Пакет: `7. Observability и DevOps`
 
+---
+
+### 🔻 Исходящие связи (`flamegraph_profiler --> X`)
+
+| Целевой блок           | Назначение сбора профилей и визуализации 🔥                    |
+| ---------------------- | -------------------------------------------------------------- |
+| `sql_executor`         | Сбор CPU-стека при исполнении SQL-запросов                     |
+| `vectorized_executor`  | Профилирование векторных операторов (scans, joins, aggregates) |
+| `sql_optimizer`        | Профилирование стадий оптимизации                              |
+| `jit_engine`           | Анализ JIT-сгенерированного кода                               |
+| `streaming_aggregator` | Профилирование стриминговой агрегации                          |
+| `etl_engine`           | Выявление bottleneck’ов в ETL                                  |
+| `cdc_streaming`        | CPU usage и yield во время репликации и стриминга              |
+| `arrow_executor`       | Анализ производительности Arrow-операторов                     |
+| `udf_engine`           | CPU usage пользовательских функций (включая sandbox)           |
+| `ci_cd_runner`         | Профилирование тестов, нагрузок                                |
+
+---
+
+### 🔺 Входящие связи (`X --> flamegraph_profiler`)
+
+| Источник               | Назначение инициализации и запуска профилирования    |
+| ---------------------- | ---------------------------------------------------- |
+| `platform_init`        | Регистрация и конфигурация источников профиля        |
+| `config_loader`        | Интервалы, фильтрация, горячие ключи                 |
+| `bootstrap_controller` | Управление циклом жизни                              |
+| `tracing_agent`        | Сбор событий для отображения в flamegraph по traceID |
+
+---
+
+### 🧩 Всего связей: **13**
+
+* Исходящие: **10**
+* Входящие: **3**
+
+---
+
+✅ Блок `7.3 Профилировщик (Flamegraph)`:
+
+* Обеспечивает **глубокую introspection** исполнения;
+* Идеально подходит для **перф-оптимизации** и **визуального анализа call stack’ов**;
+* Связан с большинством execution-компонентов;
+* Используется совместно с `opentelemetry_tracer`, `plan_cache`, `runtime_optimizer`.
