--- a/Connections/Incoming/7x04.md
+++ b/Connections/Incoming/7x04.md
@@ -1,1 +1,47 @@
+📦 **Связи для блока `7.4 Структурированное логирование` (`structured_logger`)**
+📁 Пакет: `7. Observability и DevOps`
 
+---
+
+### 🔻 Исходящие связи (`structured_logger --> X`)
+
+| Целевой блок        | Назначение логирования действий и событий                 |
+| ------------------- | --------------------------------------------------------- |
+| `sql_executor`      | Логирование всех SQL-запросов, времени выполнения, ошибок |
+| `sql_parser`        | Лог разбора запросов, синтаксических ошибок               |
+| `sql_planner`       | Лог этапов построения плана                               |
+| `sql_optimizer`     | Метаданные по правилам оптимизации                        |
+| `sql_wire_protocol` | Лог входящих команд по протоколу                          |
+| `grpc_interface`    | Лог входящих gRPC-запросов                                |
+| `rest_api`          | Лог API-вызовов и ответов                                 |
+| `cdc_streaming`     | Метаданные по стриминг-сессиям                            |
+| `etl_engine`        | Лог ETL операций, загрузок, ошибок                        |
+| `udf_engine`        | Лог UDF-вызовов, времени исполнения                       |
+| `audit_logger`      | Перенаправление критичных записей в аудит                 |
+
+---
+
+### 🔺 Входящие связи (`X --> structured_logger`)
+
+| Источник               | Назначение настройки логирования                            |
+| ---------------------- | ----------------------------------------------------------- |
+| `config_loader`        | Выбор формата (JSON, binary, текст), уровней и каналов      |
+| `bootstrap_controller` | Инициализация потоков логирования                           |
+| `logger`               | Передача логов в `structured_logger` при включённом формате |
+| `tracing_agent`        | Вставка traceID в записи логов                              |
+
+---
+
+### 🧩 Всего связей: **15**
+
+* Исходящие: **11**
+* Входящие: **4**
+
+---
+
+✅ Блок `7.4 Структурированное логирование`:
+
+* Центральный элемент **audit-friendly логирования**;
+* Полностью заменяет stdout/stderr при промышленных конфигурациях;
+* Позволяет использовать **log aggregation** и **SIEM-системы**;
+* Совместим с `prometheus_exporter`, `audit_logger`, `tracing_agent`.
