--- a/Connections/Incoming/7x05.md
+++ b/Connections/Incoming/7x05.md
@@ -1,1 +1,45 @@
+📦 **Связи для блока `7.5 Fuzzer-движок` (`fuzzer_engine`)**
+📁 Пакет: `7. Observability и DevOps`
 
+---
+
+### 🔻 Исходящие связи (`fuzzer_engine --> X`)
+
+| Целевой блок     | Назначение fuzz-тестирования и поиска уязвимостей                      |
+| ---------------- | ---------------------------------------------------------------------- |
+| `sql_parser`     | Проверка устойчивости к синтаксическим ошибкам и мутировавшим запросам |
+| `sql_planner`    | Проверка на генерацию неверных планов                                  |
+| `sql_executor`   | Выявление сбоев и утечек при некорректных данных                       |
+| `sql_optimizer`  | Проверка устойчивости rewrite-правил                                   |
+| `json_store`     | Проверка структуры JSON-документов                                     |
+| `udf_engine`     | Тестирование пользовательских функций на сбои                          |
+| `dsl_engine`     | Мутации встроенного DSL                                                |
+| `rest_api`       | Генерация случайных или мутированных HTTP-запросов                     |
+| `grpc_interface` | Fuzz-тестирование бинарного протокола                                  |
+
+---
+
+### 🔺 Входящие связи (`X --> fuzzer_engine`)
+
+| Источник           | Назначение запуска и конфигурации                 |
+| ------------------ | ------------------------------------------------- |
+| `ci_cd_runner`     | Интеграция в pipeline для автоматического fuzzing |
+| `unit_test_engine` | Используется как часть фаз тестирования           |
+| `schema_evolver`   | Fuzzing миграций схемы (DDL)                      |
+| `config_loader`    | Параметры глубины мутации, типов генерации        |
+
+---
+
+### 🧩 Всего связей: **13**
+
+* Исходящие: **9**
+* Входящие: **4**
+
+---
+
+✅ Блок `7.5 Fuzzer-движок`:
+
+* Является частью **обеспечения безопасности и стабильности ядра**;
+* Может использовать **libFuzzer**, `AFL++` или кастомный движок;
+* Сильно зависит от генераторов корректных/почти корректных SQL;
+* Отлично комплементарен с `mutation_coverage`, `unit_test_engine`, `audit_logger`.
