--- a/Connections/Incoming/7x06.md
+++ b/Connections/Incoming/7x06.md
@@ -1,1 +1,43 @@
+📦 **Связи для блока `7.6 CI/CD раннер` (`ci_cd_runner`)**
+📁 Пакет: `7. Observability и DevOps`
 
+---
+
+### 🔻 Исходящие связи (`ci_cd_runner --> X`)
+
+| Целевой блок               | Назначение автоматизации тестирования, сборки и развёртывания |
+| -------------------------- | ------------------------------------------------------------- |
+| `unit_test_engine`         | Запуск unit-тестов на каждый коммит                           |
+| `integration_test_harness` | Прогон интеграционных тестов                                  |
+| `stress_test_runner`       | Запуск нагрузочного тестирования                              |
+| `mutation_coverage`        | Оценка покрытия и мутационного контроля                       |
+| `fuzzer_engine`            | Инициация fuzz-тестов на регулярной основе                    |
+| `schema_evolver`           | Проверка миграций схем в автоматическом режиме                |
+| `audit_logger`             | Логирование результатов прогонов                              |
+| `etl_engine`               | Прогон ETL-наборов (данные/выгрузки) как часть пайплайна      |
+| `plugin_loader`            | Проверка сторонних плагинов на совместимость                  |
+
+---
+
+### 🔺 Входящие связи (`X --> ci_cd_runner`)
+
+| Источник               | Назначение конфигурации и инициализации          |
+| ---------------------- | ------------------------------------------------ |
+| `config_loader`        | Настройка пайплайнов, условий запуска, окружений |
+| `bootstrap_controller` | Инициализация CI/CD как фонового сервиса         |
+
+---
+
+### 🧩 Всего связей: **11**
+
+* Исходящие: **9**
+* Входящие: **2**
+
+---
+
+✅ Блок `7.6 CI/CD раннер`:
+
+* Ключевой компонент DevOps-инфраструктуры СУБД;
+* Обеспечивает **полный конвейер проверки качества кода и совместимости**;
+* Является источником метрик стабильности и корректности;
+* Имеет критическое значение при добавлении расширений и миграций.
