--- a/Connections/Incoming/7x07.md
+++ b/Connections/Incoming/7x07.md
@@ -1,1 +1,45 @@
+📦 **Связи для блока `7.7 Эволюция схемы` (`schema_evolver`)**
+📁 Пакет: `7. Observability и DevOps`
 
+---
+
+### 🔻 Исходящие связи (`schema_evolver --> X`)
+
+| Целевой блок                         | Назначение обеспечения эволюции структуры таблиц без простоев |
+| ------------------------------------ | ------------------------------------------------------------- |
+| `versioned_tables`                   | Применение изменений с поддержкой SYSTEM VERSIONED            |
+| `table_manager` (предполагаемый)     | Управление объектами таблиц                                   |
+| `mvcc_engine`                        | Совместимость с текущими версиями строк                       |
+| `snapshot_manager`                   | Сохранение снимков до/после эволюции                          |
+| `audit_logger`                       | Фиксация всех изменений в структуре                           |
+| `ddl_executor` (входит в SQL-движок) | Исполнение команд ALTER/CREATE/DROP                           |
+| `unit_test_engine`                   | Проверка корректности схемы после эволюции                    |
+| `ci_cd_runner`                       | Автоматизация прогонов миграций                               |
+| `mutation_coverage`                  | Покрытие новых ветвей и состояний в логике схем               |
+
+---
+
+### 🔺 Входящие связи (`X --> schema_evolver`)
+
+| Источник             | Назначение запуска процесса изменения схем   |
+| -------------------- | -------------------------------------------- |
+| `config_loader`      | Параметры миграции: online/offline, rollback |
+| `rest_api`           | Запросы управления схемой от внешних систем  |
+| `cli_shell`          | Модификация через командную строку           |
+| `dsl_task_scheduler` | Плановые миграции, заданные пользователем    |
+
+---
+
+### 🧩 Всего связей: **12**
+
+* Исходящие: **9**
+* Входящие: **3**
+
+---
+
+✅ Блок `7.7 Эволюция схемы`:
+
+* Обеспечивает поддержку **online ALTER, live reload, instant rollback**;
+* Является критически важным для **миграций в продуктиве без downtime**;
+* Интегрируется с системой контроля версий и тестов;
+* Предусматривает совместимость с MVCC, WAL и snapshot-изоляцией.
