--- a/Connections/Incoming/7x08.md
+++ b/Connections/Incoming/7x08.md
@@ -1,1 +1,44 @@
+📦 **Связи для блока `7.8 Агент трассировки запросов` (`tracing_agent`)**
+📁 Пакет: `7. Observability и DevOps`
 
+---
+
+### 🔻 Исходящие связи (`tracing_agent --> X`)
+
+| Целевой блок           | Назначение                                                         |
+| ---------------------- | ------------------------------------------------------------------ |
+| `sql_executor`         | Встраивание точек трассировки в выполнение SQL-запросов            |
+| `sql_optimizer`        | Анализ времени на фазы планирования / оптимизации                  |
+| `vectorized_executor`  | Отслеживание времени выполнения векторами и потоками               |
+| `grpc_interface`       | Маршрутизация gRPC-запросов для трассировки распределённых вызовов |
+| `rest_api`             | Трассировка REST-запросов до уровня SQL/методов                    |
+| `flamegraph_profiler`  | Визуализация трассировки как flamegraph                            |
+| `opentelemetry_tracer` | Экспорт событий в стандартный OpenTelemetry формат                 |
+| `structured_logger`    | Запись трассировки в структурированные логи                        |
+| `prometheus_exporter`  | Сбор и экспорт задержек для метрик Prometheus                      |
+
+---
+
+### 🔺 Входящие связи (`X --> tracing_agent`)
+
+| Источник        | Назначение инициализации и управления трассировкой     |
+| --------------- | ------------------------------------------------------ |
+| `config_loader` | Включение/отключение трассировки, фильтры              |
+| `cli_shell`     | Управление профилем трассировки вручную                |
+| `ci_cd_runner`  | Автоматическое включение трассировки в тестовых средах |
+
+---
+
+### 🧩 Всего связей: **12**
+
+* Исходящие: **9**
+* Входящие: **3**
+
+---
+
+✅ Блок `7.8 Агент трассировки запросов`:
+
+* Обеспечивает **глубокий контроль и анализ выполнения всех запросов**;
+* Интеграция с **OpenTelemetry** позволяет подключать внешние системы мониторинга;
+* Обеспечивает **низкоуровневую трассировку** SQL, API и внутренних слоёв исполнения;
+* Критически важен при отладке производительности и локализации узких мест.
