--- a/Connections/Incoming/8x01.md
+++ b/Connections/Incoming/8x01.md
@@ -1,1 +1,46 @@
+📦 **Связи для блока `8.1 Векторный исполнитель` (`vectorized_executor`)**
+📁 Пакет: `8. Производительность`
 
+---
+
+### 🔻 Исходящие связи (`vectorized_executor --> X`)
+
+| Целевой блок           | Назначение                                              |
+| ---------------------- | ------------------------------------------------------- |
+| `sql_executor`         | Используется как механизм исполнения векторных запросов |
+| `adaptive_joins`       | Реализация векторных хеш- и merge-join операций         |
+| `streaming_aggregator` | Векторные агрегаты для OLAP/HTAP запросов               |
+| `plan_cache`           | Векторные планы сохраняются и переиспользуются          |
+| `runtime_optimizer`    | Подстройка параметров векторного выполнения             |
+| `arrow_executor`       | Использование Apache Arrow batch format                 |
+| `tracing_agent`        | Встраивание точек трассировки в векторное выполнение    |
+| `flamegraph_profiler`  | Профилирование производительности векторами             |
+| `buffer_pool`          | Использование заранее загруженных страниц данных        |
+
+---
+
+### 🔺 Входящие связи (`X --> vectorized_executor`)
+
+| Источник          | Назначение вызова векторного движка                        |
+| ----------------- | ---------------------------------------------------------- |
+| `sql_planner`     | Генерация планов, ориентированных на векторизацию          |
+| `sql_optimizer`   | Выбор между векторным и обычным исполнителем               |
+| `jit_engine`      | Подключение JIT-компилированных операторов                 |
+| `config_loader`   | Параметры включения vectorized execution                   |
+| `analytic_engine` | Использует векторное выполнение для аналитических операций |
+
+---
+
+### 🧩 Всего связей: **14**
+
+* Исходящие: **9**
+* Входящие: **5**
+
+---
+
+✅ Блок `8.1 Векторный исполнитель`:
+
+* Ключевой компонент **высокопроизводительного OLAP и HTAP**;
+* Обеспечивает **векторизацию фильтров, join’ов, агрегатов, scan’ов**;
+* Встроена поддержка **Apache Arrow** и **runtime оптимизации**;
+* Интегрируется с JIT, планировщиком, кешем планов, профилировщиком и API трассировки.
