--- a/Connections/Incoming/8x02.md
+++ b/Connections/Incoming/8x02.md
@@ -1,1 +1,46 @@
+📦 **Связи для блока `8.2 Адаптивные соединения` (`adaptive_joins`)**
+📁 Пакет: `8. Производительность`
+
+---
+
+### 🔻 Исходящие связи (`adaptive_joins --> X`)
+
+| Целевой блок          | Назначение                                       |
+| --------------------- | ------------------------------------------------ |
+| `vectorized_executor` | Использует векторные join-операции               |
+| `sql_executor`        | Адаптивные join’ы в процессе выполнения SQL      |
+| `sql_optimizer`       | Возврат стоимости и информации о join-стратегии  |
+| `runtime_optimizer`   | Runtime-переключение join-алгоритма              |
+| `plan_cache`          | Сохранение адаптивных планов с join-инструкциями |
+| `flamegraph_profiler` | Профилирование сложных join-операций             |
+| `tracing_agent`       | Запись задержек на join-операциях                |
+
+---
+
+### 🔺 Входящие связи (`X --> adaptive_joins`)
+
+| Источник        | Назначение вызова адаптивных соединений                          |
+| --------------- | ---------------------------------------------------------------- |
+| `sql_optimizer` | Выбор стратегии join на основе NDV/cardinality                   |
+| `sql_planner`   | Генерация плана с пометкой "adaptive join"                       |
+| `config_loader` | Управление стратегиями join (merge/hash/index-nested loop и др.) |
+| `jit_engine`    | Генерация исполняемого join-кода                                 |
+
+---
+
+### 🧩 Всего связей: **11**
+
+* Исходящие: **7**
+* Входящие: **4**
+
+---
+
+✅ Блок `8.2 Адаптивные соединения`:
+
+* Поддерживает **runtime-переключение между join-алгоритмами**;
+* Основан на оценке **cardinality, NDV, runtime feedback**;
+* Критично важен для гибкой оптимизации OLAP/HTAP/OLTP-запросов;
+* Интегрируется с `jit_engine`, `optimizer`, `executor`, `profiler`, `tracer`.
+
+Следующий блок — `8.3 Кэш планов`. Напиши `да`, чтобы продолжить.
 
