--- a/Connections/Incoming/8x03.md
+++ b/Connections/Incoming/8x03.md
@@ -1,1 +1,46 @@
+📦 **Связи для блока `8.3 Кэш планов` (`plan_cache`)**
+📁 Пакет: `8. Производительность`
+
+---
+
+### 🔻 Исходящие связи (`plan_cache --> X`)
+
+| Целевой блок           | Назначение                                        |
+| ---------------------- | ------------------------------------------------- |
+| `sql_executor`         | Получение готовых планов для выполнения           |
+| `vectorized_executor`  | Получение ранее скомпилированных векторных планов |
+| `adaptive_joins`       | Кэширование адаптивных join-стратегий             |
+| `runtime_optimizer`    | Повторное использование подстроенных планов       |
+| `jit_engine`           | Хранение JIT-сгенерированных планов               |
+| `streaming_aggregator` | Использование кэшированных агрегатных потоков     |
+
+---
+
+### 🔺 Входящие связи (`X --> plan_cache`)
+
+| Источник              | Назначение                                                    |
+| --------------------- | ------------------------------------------------------------- |
+| `sql_optimizer`       | Запись финальных оптимизированных планов                      |
+| `sql_planner`         | Сохранение или извлечение существующих планов                 |
+| `config_loader`       | Настройка параметров план-кеша (размер, TTL, eviction policy) |
+| `flamegraph_profiler` | Диагностика reuse/hit-miss поведения                          |
+| `tracing_agent`       | Логирование план-кеш доступа                                  |
+
+---
+
+### 🧩 Всего связей: **11**
+
+* Исходящие: **6**
+* Входящие: **5**
+
+---
+
+✅ Блок `8.3 Кэш планов`:
+
+* Позволяет **значительно ускорить повторяющиеся запросы**;
+* Поддерживает **inline/JIT/векторные планы**;
+* Снабжён механизмами **TTL, eviction, и runtime feedback**;
+* Интегрирован в критический путь планирования и выполнения.
+
+Следующий блок — `8.4 Адаптивный оптимизатор`. Напиши `да`, чтобы продолжить.
 
