--- a/Connections/Incoming/8x04.md
+++ b/Connections/Incoming/8x04.md
@@ -1,1 +1,44 @@
+📦 **Связи для блока `8.4 Адаптивный оптимизатор` (`runtime_optimizer`)**
+📁 Пакет: `8. Производительность`
+
+---
+
+### 🔻 Исходящие связи (`runtime_optimizer --> X`)
+
+| Целевой блок           | Назначение                                                        |
+| ---------------------- | ----------------------------------------------------------------- |
+| `sql_executor`         | Передача адаптированного плана во время выполнения                |
+| `adaptive_joins`       | Переключение join-алгоритма в зависимости от наблюдаемых данных   |
+| `plan_cache`           | Сохранение адаптированных планов                                  |
+| `streaming_aggregator` | Подстройка стратегии агрегирования (pushdown, pre-agg, streaming) |
+| `vectorized_executor`  | Адаптация векторного плана с учётом профиля выполнения            |
+
+---
+
+### 🔺 Входящие связи (`X --> runtime_optimizer`)
+
+| Источник              | Назначение                                                                |
+| --------------------- | ------------------------------------------------------------------------- |
+| `sql_optimizer`       | Инициализация с базовой стоимостью/стратегией                             |
+| `flamegraph_profiler` | Передача наблюдаемых "горячих" участков для re-оптимизации                |
+| `tracing_agent`       | Передача фактических latencies/join cardinalities                         |
+| `config_loader`       | Настройка параметров адаптивного планирования (порог, повтор, heuristics) |
+
+---
+
+### 🧩 Всего связей: **9**
+
+* Исходящие: **5**
+* Входящие: **4**
+
+---
+
+✅ Блок `8.4 Адаптивный оптимизатор`:
+
+* Обеспечивает **динамическую адаптацию плана запроса во время выполнения**;
+* Критичен для **HTAP и непредсказуемых распределений данных**;
+* Интегрирован с `executor`, `joins`, `aggregator`, `cache`, `profiler`;
+* Учитывает **runtime feedback, latency, cardinality drift**.
+
+Следующий блок — `8.5 Стриминговый агрегатор`. Напиши `да`, чтобы продолжить.
 
