--- a/Connections/Incoming/8x07.md
+++ b/Connections/Incoming/8x07.md
@@ -1,1 +1,44 @@
+📦 **Связи для блока `8.6 Arrow-исполнитель` (`arrow_executor`)**
+📁 Пакет: `8. Производительность`
+
+---
+
+### 🔻 Исходящие связи (`arrow_executor --> X`)
+
+| Целевой блок          | Назначение                                                         |
+| --------------------- | ------------------------------------------------------------------ |
+| `vectorized_executor` | Делегирует выполнение при использовании Arrow-совместимого плана   |
+| `analytic_engine`     | Выдаёт колонко-ориентированные результаты для последующего анализа |
+| `arrow_runtime`       | Использует как низкоуровневый рантайм для Arrow-блоков             |
+
+---
+
+### 🔺 Входящие связи (`X --> arrow_executor`)
+
+| Источник        | Назначение                                                                   |
+| --------------- | ---------------------------------------------------------------------------- |
+| `sql_executor`  | Вызывает Arrow-исполнитель при оптимальных условиях (format-aware execution) |
+| `sql_optimizer` | Генерирует Arrow-aware планы при наличии подходящей схемы                    |
+| `arrow_layout`  | Передаёт memory layout для Arrow execution                                   |
+| `for_encoding`  | Обеспечивает декодинг FOR-блоков для Arrow processing                        |
+| `column_store`  | Поставляет колонки в формате совместимом с Arrow                             |
+| `jit_engine`    | JIT-компилирует Arrow-вызовы и встраивает в исполняемый план                 |
+
+---
+
+### 🧩 Всего связей: **9**
+
+* Исходящие: **3**
+* Входящие: **6**
+
+---
+
+✅ Блок `8.6 Arrow-исполнитель`:
+
+* Ключевой компонент **format-aware** и **векторного исполнения**;
+* Полностью совместим с **Apache Arrow memory layout**;
+* Активно используется при работе с column-store, FOR-кодированием и аналитикой;
+* Поддерживает **низкую задержку** и **высокую пропускную способность**.
+
+Следующий блок — `8.7 Мгновенный snapshot`. Напиши `да`, чтобы продолжить.
 
