--- a/Connections/Incoming/8x05.md
+++ b/Connections/Incoming/8x05.md
@@ -1,44 +1,40 @@
-📦 **Связи для блока `8.4 Адаптивный оптимизатор` (`runtime_optimizer`)**
+📦 **Связи для блока `8.5 Стриминговый агрегатор` (`streaming_aggregator`)**
 📁 Пакет: `8. Производительность`
 
 ---
 
-### 🔻 Исходящие связи (`runtime_optimizer --> X`)
+### 🔻 Исходящие связи (`streaming_aggregator --> X`)
 
-| Целевой блок           | Назначение                                                        |
-| ---------------------- | ----------------------------------------------------------------- |
-| `sql_executor`         | Передача адаптированного плана во время выполнения                |
-| `adaptive_joins`       | Переключение join-алгоритма в зависимости от наблюдаемых данных   |
-| `plan_cache`           | Сохранение адаптированных планов                                  |
-| `streaming_aggregator` | Подстройка стратегии агрегирования (pushdown, pre-agg, streaming) |
-| `vectorized_executor`  | Адаптация векторного плана с учётом профиля выполнения            |
+| Целевой блок          | Назначение                                                |
+| --------------------- | --------------------------------------------------------- |
+| `vectorized_executor` | Использование в качестве подэтапа в векторном исполнении  |
+| `analytic_engine`     | Предоставление агрегированных потоков для оконных функций |
+| `plan_cache`          | Сохранение stream-aware агрегатных планов                 |
 
 ---
 
-### 🔺 Входящие связи (`X --> runtime_optimizer`)
+### 🔺 Входящие связи (`X --> streaming_aggregator`)
 
-| Источник              | Назначение                                                                |
-| --------------------- | ------------------------------------------------------------------------- |
-| `sql_optimizer`       | Инициализация с базовой стоимостью/стратегией                             |
-| `flamegraph_profiler` | Передача наблюдаемых "горячих" участков для re-оптимизации                |
-| `tracing_agent`       | Передача фактических latencies/join cardinalities                         |
-| `config_loader`       | Настройка параметров адаптивного планирования (порог, повтор, heuristics) |
-
----
-
-### 🧩 Всего связей: **9**
-
-* Исходящие: **5**
-* Входящие: **4**
+| Источник              | Назначение                                                          |
+| --------------------- | ------------------------------------------------------------------- |
+| `sql_executor`        | Вызывает агрегатор для COUNT/SUM/MIN/MAX/... в режиме потока        |
+| `adaptive_aggregates` | Делегирует вычисление агрегатов в стриминговом режиме               |
+| `runtime_optimizer`   | Подстраивает стратегию агрегирования на основе потока и selectivity |
+| `etl_engine`          | Использует потоковые агрегаты при загрузке/parsing                  |
+| `cdc_streaming`       | Агрегация изменений в режиме потока (например, windowed aggregates) |
 
 ---
 
-✅ Блок `8.4 Адаптивный оптимизатор`:
+### 🧩 Всего связей: **8**
 
-* Обеспечивает **динамическую адаптацию плана запроса во время выполнения**;
-* Критичен для **HTAP и непредсказуемых распределений данных**;
-* Интегрирован с `executor`, `joins`, `aggregator`, `cache`, `profiler`;
-* Учитывает **runtime feedback, latency, cardinality drift**.
+* Исходящие: **3**
+* Входящие: **5**
 
-Следующий блок — `8.5 Стриминговый агрегатор`. Напиши `да`, чтобы продолжить.
+---
 
+✅ Блок `8.5 Стриминговый агрегатор`:
+
+* Ключевой компонент **реального времени** и **OLAP на лету**;
+* Обеспечивает эффективную агрегацию без materialize-операций;
+* Интегрирован с ETL, CDC, аналитикой, адаптивным движком и executor;
+* Учитывает **векторные, оконные и адаптивные стратегии**.
