--- a/Connections/Incoming/8x06.md
+++ b/Connections/Incoming/8x06.md
@@ -1,44 +1,41 @@
-📦 **Связи для блока `8.4 Адаптивный оптимизатор` (`runtime_optimizer`)**
+📦 **Связи для блока `8.6 Arrow-исполнитель` (`arrow_executor`)**
 📁 Пакет: `8. Производительность`
 
 ---
 
-### 🔻 Исходящие связи (`runtime_optimizer --> X`)
+### 🔻 Исходящие связи (`arrow_executor --> X`)
 
-| Целевой блок           | Назначение                                                        |
-| ---------------------- | ----------------------------------------------------------------- |
-| `sql_executor`         | Передача адаптированного плана во время выполнения                |
-| `adaptive_joins`       | Переключение join-алгоритма в зависимости от наблюдаемых данных   |
-| `plan_cache`           | Сохранение адаптированных планов                                  |
-| `streaming_aggregator` | Подстройка стратегии агрегирования (pushdown, pre-agg, streaming) |
-| `vectorized_executor`  | Адаптация векторного плана с учётом профиля выполнения            |
+| Целевой блок          | Назначение                                                         |
+| --------------------- | ------------------------------------------------------------------ |
+| `vectorized_executor` | Делегирует выполнение при использовании Arrow-совместимого плана   |
+| `analytic_engine`     | Выдаёт колонко-ориентированные результаты для последующего анализа |
+| `arrow_runtime`       | Использует как низкоуровневый рантайм для Arrow-блоков             |
 
 ---
 
-### 🔺 Входящие связи (`X --> runtime_optimizer`)
+### 🔺 Входящие связи (`X --> arrow_executor`)
 
-| Источник              | Назначение                                                                |
-| --------------------- | ------------------------------------------------------------------------- |
-| `sql_optimizer`       | Инициализация с базовой стоимостью/стратегией                             |
-| `flamegraph_profiler` | Передача наблюдаемых "горячих" участков для re-оптимизации                |
-| `tracing_agent`       | Передача фактических latencies/join cardinalities                         |
-| `config_loader`       | Настройка параметров адаптивного планирования (порог, повтор, heuristics) |
+| Источник        | Назначение                                                                   |
+| --------------- | ---------------------------------------------------------------------------- |
+| `sql_executor`  | Вызывает Arrow-исполнитель при оптимальных условиях (format-aware execution) |
+| `sql_optimizer` | Генерирует Arrow-aware планы при наличии подходящей схемы                    |
+| `arrow_layout`  | Передаёт memory layout для Arrow execution                                   |
+| `for_encoding`  | Обеспечивает декодинг FOR-блоков для Arrow processing                        |
+| `column_store`  | Поставляет колонки в формате совместимом с Arrow                             |
+| `jit_engine`    | JIT-компилирует Arrow-вызовы и встраивает в исполняемый план                 |
 
 ---
 
 ### 🧩 Всего связей: **9**
 
-* Исходящие: **5**
-* Входящие: **4**
+* Исходящие: **3**
+* Входящие: **6**
 
 ---
 
-✅ Блок `8.4 Адаптивный оптимизатор`:
+✅ Блок `8.6 Arrow-исполнитель`:
 
-* Обеспечивает **динамическую адаптацию плана запроса во время выполнения**;
-* Критичен для **HTAP и непредсказуемых распределений данных**;
-* Интегрирован с `executor`, `joins`, `aggregator`, `cache`, `profiler`;
-* Учитывает **runtime feedback, latency, cardinality drift**.
-
-Следующий блок — `8.5 Стриминговый агрегатор`. Напиши `да`, чтобы продолжить.
-
+* Ключевой компонент **format-aware** и **векторного исполнения**;
+* Полностью совместим с **Apache Arrow memory layout**;
+* Активно используется при работе с column-store, FOR-кодированием и аналитикой;
+* Поддерживает **низкую задержку** и **высокую пропускную способность**.
