--- a/Connections/Incoming/8x07.md
+++ b/Connections/Incoming/8x07.md
@@ -1,44 +1,44 @@
-📦 **Связи для блока `8.6 Arrow-исполнитель` (`arrow_executor`)**
+📦 **Связи для блока `8.7 Мгновенный snapshot` (`instant_snapshot`)**
 📁 Пакет: `8. Производительность`
 
 ---
 
-### 🔻 Исходящие связи (`arrow_executor --> X`)
+### 🔻 Исходящие связи (`instant_snapshot --> X`)
 
-| Целевой блок          | Назначение                                                         |
-| --------------------- | ------------------------------------------------------------------ |
-| `vectorized_executor` | Делегирует выполнение при использовании Arrow-совместимого плана   |
-| `analytic_engine`     | Выдаёт колонко-ориентированные результаты для последующего анализа |
-| `arrow_runtime`       | Использует как низкоуровневый рантайм для Arrow-блоков             |
+| Целевой блок       | Назначение                                           |
+| ------------------ | ---------------------------------------------------- |
+| `snapshot_manager` | Делегирование создания/подключения snapshot'а        |
+| `recovery_service` | Предоставляет моментальные снимки для восстановления |
+| `versioned_tables` | Обеспечение состояния таблиц на момент snapshot      |
+| `buffer_pool`      | Интеграция с кешем страниц при сохранении snapshot   |
 
 ---
 
-### 🔺 Входящие связи (`X --> arrow_executor`)
+### 🔺 Входящие связи (`X --> instant_snapshot`)
 
-| Источник        | Назначение                                                                   |
-| --------------- | ---------------------------------------------------------------------------- |
-| `sql_executor`  | Вызывает Arrow-исполнитель при оптимальных условиях (format-aware execution) |
-| `sql_optimizer` | Генерирует Arrow-aware планы при наличии подходящей схемы                    |
-| `arrow_layout`  | Передаёт memory layout для Arrow execution                                   |
-| `for_encoding`  | Обеспечивает декодинг FOR-блоков для Arrow processing                        |
-| `column_store`  | Поставляет колонки в формате совместимом с Arrow                             |
-| `jit_engine`    | JIT-компилирует Arrow-вызовы и встраивает в исполняемый план                 |
+| Источник               | Назначение                                           |
+| ---------------------- | ---------------------------------------------------- |
+| `sql_executor`         | Вызов snapshot для `AS OF` запросов                  |
+| `schema_evolver`       | Снимает snapshot перед миграцией схемы               |
+| `multi_tenant_limiter` | Управляет snapshot'ами на уровне tenant              |
+| `crash_recovery`       | Использует как точку отката при сбоях                |
+| `vectorized_executor`  | Может запросить мгновенный snapshot как read barrier |
 
 ---
 
 ### 🧩 Всего связей: **9**
 
-* Исходящие: **3**
-* Входящие: **6**
+* Исходящие: **4**
+* Входящие: **5**
 
 ---
 
-✅ Блок `8.6 Arrow-исполнитель`:
+✅ Блок `8.7 Мгновенный snapshot`:
 
-* Ключевой компонент **format-aware** и **векторного исполнения**;
-* Полностью совместим с **Apache Arrow memory layout**;
-* Активно используется при работе с column-store, FOR-кодированием и аналитикой;
-* Поддерживает **низкую задержку** и **высокую пропускную способность**.
+* Обеспечивает **мгновенные копии состояния БД** без блокировки;
+* Используется для: *AS OF* запросов, recovery, schema evolution, multi-tenant isolation;
+* Поддерживает **copy-on-write**, согласованность и совместимость с MVCC;
+* Ключевой элемент в поддержке **низколатентного бэкапа и откатов**.
 
-Следующий блок — `8.7 Мгновенный snapshot`. Напиши `да`, чтобы продолжить.
-
+Следующий пакет: `9. Расширяемость`.
+Если готов — напиши `да`.
