--- a/Connections/Incoming/9x01.md
+++ b/Connections/Incoming/9x01.md
@@ -1,1 +1,42 @@
+📦 **Связи для блока `9.1 Песочница UDF` (`udf_sandbox`)**
+📁 Пакет: `9. Расширяемость`
 
+---
+
+### 🔻 Исходящие связи (`udf_sandbox --> X`)
+
+| Целевой блок        | Назначение                                                   |
+| ------------------- | ------------------------------------------------------------ |
+| `udf_engine`        | Основной движок, выполняющий UDF в изолированной среде       |
+| `audit_logger`      | Логирует использование UDF (метки безопасности, трассировка) |
+| `access_control`    | Проверка прав на регистрацию/выполнение UDF                  |
+| `plugin_loader`     | Подключает внешние модули в UDF-среду                        |
+| `structured_logger` | Логирование UDF-операций и runtime событий                   |
+
+---
+
+### 🔺 Входящие связи (`X --> udf_sandbox`)
+
+| Источник                        | Назначение                                                                       |
+| ------------------------------- | -------------------------------------------------------------------------------- |
+| `pl_lang_runtime`               | Исполняет UDF в пределах процедур                                                |
+| `json_api`                      | Позволяет зарегистрировать UDF через внешний API                                 |
+| `sql_executor`                  | Запускает вызовы UDF в SQL                                                       |
+| `dsl_engine`                    | Встраивает sandbox-вызовы как часть кастомной логики                             |
+| `security_policies` (логически) | Применяет политики доступа внутри песочницы (реализовано через `access_control`) |
+
+---
+
+### 🧩 Всего связей: **10**
+
+* Исходящие: **5**
+* Входящие: **5**
+
+---
+
+✅ Блок `9.1 Песочница UDF`:
+
+* Обеспечивает **изолированное и безопасное выполнение UDF** на Lua, WASM, JS, C;
+* Поддерживает sandboxing, runtime лимиты, ограничения по CPU/IOPS/Memory;
+* Интегрирован в систему авторизации, логирования и трассировки;
+* Критично важен для **расширяемости без ущерба безопасности**.
