--- a/Connections/Incoming/9x02.md
+++ b/Connections/Incoming/9x02.md
@@ -1,1 +1,42 @@
+📦 **Связи для блока `9.2 Загрузчик плагинов` (`plugin_loader`)**
+📁 Пакет: `9. Расширяемость`
 
+---
+
+### 🔻 Исходящие связи (`plugin_loader --> X`)
+
+| Целевой блок         | Назначение                                                            |
+| -------------------- | --------------------------------------------------------------------- |
+| `udf_sandbox`        | Подключение расширений в изолированную среду выполнения               |
+| `sql_wire_protocol`  | Расширение протоколов с помощью плагинов (например, custom протоколы) |
+| `json_api`           | Подключение обработчиков API / сериализаторов                         |
+| `dsl_task_scheduler` | Расширение DSL-заданий пользовательскими обработчиками                |
+| `structured_logger`  | Логирование операций загрузки/инициализации плагинов                  |
+
+---
+
+### 🔺 Входящие связи (`X --> plugin_loader`)
+
+| Источник          | Назначение                                          |
+| ----------------- | --------------------------------------------------- |
+| `rest_api`        | Загрузка плагинов через REST интерфейс              |
+| `cli_shell`       | Команды загрузки плагинов                           |
+| `udf_engine`      | Динамическая регистрация внешних функций            |
+| `pl_lang_runtime` | Подключение процедур и внешних модулей              |
+| `etl_engine`      | Расширение обработки через пользовательские плагины |
+
+---
+
+### 🧩 Всего связей: **10**
+
+* Исходящие: **5**
+* Входящие: **5**
+
+---
+
+✅ Блок `9.2 Загрузчик плагинов`:
+
+* Позволяет динамически подключать внешние модули (`.so`, `.dll`, `.wasm`);
+* Важен для **модульной архитектуры** и сценариев *runtime extensibility*;
+* Обеспечивает гибкость при добавлении новых UDF, API и DSL-функционала;
+* Интегрирован в API, CLI и UDF-инфраструктуру, соблюдает sandbox/логгирование.
