--- a/Connections/Incoming/9x03.md
+++ b/Connections/Incoming/9x03.md
@@ -1,1 +1,42 @@
+📦 **Связи для блока `9.3 SQL wire-протокол` (`sql_wire_protocol`)**
+📁 Пакет: `9. Расширяемость`
 
+---
+
+### 🔻 Исходящие связи (`sql_wire_protocol --> X`)
+
+| Целевой блок        | Назначение                                            |
+| ------------------- | ----------------------------------------------------- |
+| `sql_parser`        | Обработка SQL-запросов, полученных по wire-протоколу  |
+| `sql_executor`      | Выполнение SQL, поступившего по wire                  |
+| `access_control`    | Аутентификация / авторизация на уровне wire-протокола |
+| `plugin_loader`     | Возможность расширения wire-протокола                 |
+| `structured_logger` | Логирование событий подключения, сессий, ошибок       |
+
+---
+
+### 🔺 Входящие связи (`X --> sql_wire_protocol`)
+
+| Источник         | Назначение                                                   |
+| ---------------- | ------------------------------------------------------------ |
+| `jdbc_server`    | Использует wire-протокол PostgreSQL для совместимости с JDBC |
+| `odbc_gateway`   | Использует wire-протокол для ODBC                            |
+| `grpc_interface` | При маппинге gRPC → SQL возможен вызов через wire-протокол   |
+| `cli_shell`      | Обращение к ядру СУБД через wire (TCP или Unix socket)       |
+| `rest_api`       | Может использовать wire-протокол в качестве backend bridge   |
+
+---
+
+### 🧩 Всего связей: **10**
+
+* Исходящие: **5**
+* Входящие: **5**
+
+---
+
+✅ Блок `9.3 SQL wire-протокол`:
+
+* Поддерживает бинарные протоколы PostgreSQL и собственные;
+* Ключевой компонент для **совместимости с внешними драйверами** (JDBC, ODBC, psql);
+* Расширяем через плагины, логируется, участвует в авторизации;
+* Связан с основным SQL-стеком: парсер, исполнитель, логика безопасности.
