--- a/Connections/Incoming/9x04.md
+++ b/Connections/Incoming/9x04.md
@@ -1,1 +1,42 @@
+📦 **Связи для блока `9.4 JSON API` (`json_api`)**
+📁 Пакет: `9. Расширяемость`
 
+---
+
+### 🔻 Исходящие связи (`json_api --> X`)
+
+| Целевой блок        | Назначение                                       |
+| ------------------- | ------------------------------------------------ |
+| `sql_parser`        | Преобразование JSON-запросов в SQL/DSL           |
+| `sql_executor`      | Исполнение JSON-транзакций (insert/update/query) |
+| `json_store`        | Доступ к JSON-таблицам напрямую из API           |
+| `access_control`    | Проверка прав доступа при вызове API             |
+| `structured_logger` | Логирование вызовов, ошибок, откликов JSON API   |
+
+---
+
+### 🔺 Входящие связи (`X --> json_api`)
+
+| Источник         | Назначение                                                 |
+| ---------------- | ---------------------------------------------------------- |
+| `rest_api`       | JSON API встраивается как маршрут в REST-интерфейс         |
+| `graphql_api`    | Резолверы GraphQL могут вызывать JSON API                  |
+| `cli_shell`      | Возможность вызова JSON API (для тестов или автоматизации) |
+| `plugin_loader`  | Расширение JSON API кастомными методами                    |
+| `external_hooks` | Триггеры / события вызывают JSON API как callback          |
+
+---
+
+### 🧩 Всего связей: **10**
+
+* Исходящие: **5**
+* Входящие: **5**
+
+---
+
+✅ Блок `9.4 JSON API`:
+
+* Обеспечивает **легковесный RESTful доступ** к данным, включая insert/query;
+* Участвует в гибкой маршрутизации JSON-операций (ETL, событийная модель);
+* Поддерживает авторизацию, логирование, трассировку;
+* Используется как самостоятельный API или как подслой REST/GraphQL-интерфейсов.
