--- a/Connections/Incoming/9x05.md
+++ b/Connections/Incoming/9x05.md
@@ -1,1 +1,42 @@
+📦 **Связи для блока `9.5 Планировщик DSL-задач` (`dsl_task_scheduler`)**
+📁 Пакет: `9. Расширяемость`
 
+---
+
+### 🔻 Исходящие связи (`dsl_task_scheduler --> X`)
+
+| Целевой блок     | Назначение                                              |
+| ---------------- | ------------------------------------------------------- |
+| `dsl_engine`     | Выполнение DSL-сценариев (планировщик вызывает код DSL) |
+| `sql_executor`   | Поддержка запуска SQL-запросов в рамках задания         |
+| `udf_engine`     | Использование UDF внутри DSL-задач                      |
+| `ci_cd_runner`   | Интеграция с CI/CD при генерации/деплое задач           |
+| `schema_evolver` | Плановое изменение схем (ALTER/DDL) через DSL-задачи    |
+
+---
+
+### 🔺 Входящие связи (`X --> dsl_task_scheduler`)
+
+| Источник          | Назначение                                                       |
+| ----------------- | ---------------------------------------------------------------- |
+| `rest_api`        | Управление заданиями (создание, удаление, мониторинг) через REST |
+| `cli_shell`       | Поддержка запуска и отладки задач вручную                        |
+| `external_hooks`  | Автоматический запуск заданий по событиям                        |
+| `etl_engine`      | Планирование ETL-трансформаций через DSL                         |
+| `access_policies` | Определение прав доступа к задачам и условиям их исполнения      |
+
+---
+
+### 🧩 Всего связей: **10**
+
+* Исходящие: **5**
+* Входящие: **5**
+
+---
+
+✅ Блок `9.5 Планировщик DSL-задач`:
+
+* Позволяет запускать скрипты DSL/UDF по расписанию или событиям;
+* Может вызывать SQL, изменять схему, обрабатывать данные;
+* Интегрируется в CI/CD пайплайны и REST API;
+* Контролируется политиками доступа, отслеживается в observability.
