--- a/Connections/Incoming/10x01.md
+++ b/Connections/Incoming/10x01.md
@@ -1,1 +1,42 @@
+📦 **Связи для блока `10.1 Unit-тесты` (`unit_test_engine`)**
+📁 Пакет: `10. Тестируемость`
 
+---
+
+### 🔻 Исходящие связи (`unit_test_engine --> X`)
+
+| Целевой блок       | Назначение                                        |
+| ------------------ | ------------------------------------------------- |
+| `sql_parser`       | Юнит-тесты для парсера SQL                        |
+| `sql_optimizer`    | Тесты оптимизаций (join reorder, pushdown и др.)  |
+| `sql_executor`     | Проверка корректности исполнения SQL              |
+| `mvcc_engine`      | Тесты версионности и видимости данных             |
+| `memory_allocator` | Проверка корректной аллокации/освобождения памяти |
+
+---
+
+### 🔺 Входящие связи (`X --> unit_test_engine`)
+
+| Источник              | Назначение                                          |
+| --------------------- | --------------------------------------------------- |
+| `ci_cd_runner`        | Автоматический запуск юнит-тестов в CI/CD пайплайне |
+| `structured_logger`   | Логирование результатов тестов и ассертов           |
+| `flamegraph_profiler` | Профилирование юнит-тестов для поиска деградаций    |
+| `cli_shell`           | Ручной запуск тестов                                |
+| `access_policies`     | Разграничение прав на запуск/видимость тестов       |
+
+---
+
+### 🧩 Всего связей: **10**
+
+* Исходящие: **5**
+* Входящие: **5**
+
+---
+
+✅ Блок `10.1 Unit-тесты`:
+
+* Покрывает тестами критические компоненты: SQL, MVCC, память;
+* Интегрируется в CI/CD и DevOps;
+* Поддерживает ручной и автоматический запуск;
+* Позволяет трассировать, профилировать и логировать поведение.
