--- a/Connections/Incoming/10x02.md
+++ b/Connections/Incoming/10x02.md
@@ -1,1 +1,44 @@
+📦 **Связи для блока `10.2 Интеграционные тесты` (`integration_test_harness`)**
+📁 Пакет: `10. Тестируемость`
+
+---
+
+### 🔻 Исходящие связи (`integration_test_harness --> X`)
+
+| Целевой блок     | Назначение                                                  |
+| ---------------- | ----------------------------------------------------------- |
+| `rest_api`       | Проверка REST-интерфейсов и бизнес-логики через API-запросы |
+| `grpc_interface` | Тестирование gRPC-запросов/ответов                          |
+| `replication`    | Проверка согласованности между мастером и репликами         |
+| `raft_engine`    | Тестирование корректности consensus в условиях сбоев        |
+| `etl_engine`     | Интеграционные сценарии загрузки/трансформации/выгрузки     |
+| `cdc_streaming`  | Проверка стриминга изменений и их целостности               |
+
+---
+
+### 🔺 Входящие связи (`X --> integration_test_harness`)
+
+| Источник              | Назначение                                         |
+| --------------------- | -------------------------------------------------- |
+| `ci_cd_runner`        | Автоматизация прогонов интеграционных тестов       |
+| `structured_logger`   | Запись логов тестов, включая шаги, статусы, ошибки |
+| `access_policies`     | Контроль доступа к результатам и запуску тестов    |
+| `flamegraph_profiler` | Профилирование интеграционных сценариев            |
+| `cli_shell`           | Возможность ручного запуска интеграционных тестов  |
+
+---
+
+### 🧩 Всего связей: **11**
+
+* Исходящие: **6**
+* Входящие: **5**
+
+---
+
+✅ Блок `10.2 Интеграционные тесты`:
+
+* Охватывает взаимодействие между подсистемами;
+* Проверяет согласованность данных и обработку ошибок;
+* Учитывает внешние интерфейсы (API, gRPC, CDC);
+* Интегрирован в DevOps, профилирование и аудит.
 
