--- a/Connections/Incoming/10x03.md
+++ b/Connections/Incoming/10x03.md
@@ -1,1 +1,45 @@
+📦 **Связи для блока `10.3 Стресс-тесты` (`stress_test_runner`)**
+📁 Пакет: `10. Тестируемость`
+
+---
+
+### 🔻 Исходящие связи (`stress_test_runner --> X`)
+
+| Целевой блок       | Назначение                                                           |
+| ------------------ | -------------------------------------------------------------------- |
+| `sql_executor`     | Проверка поведения под высокой нагрузкой                             |
+| `mvcc_engine`      | Проверка многоверсионности при высоком числе конкурентных транзакций |
+| `wal_manager`      | Нагрузочное тестирование WAL на IOPS и write-throughput              |
+| `buffer_pool`      | Оценка давления на кеш страниц при массовом доступе                  |
+| `etl_engine`       | Имитация параллельных ETL-загрузок при нагрузке                      |
+| `replication`      | Стрессирование механизма репликации                                  |
+| `snapshot_manager` | Проверка создания snapshot'ов при высокой конкуренции                |
+| `ttl_eviction`     | Стресс на механизм автоудаления (вытеснения)                         |
+
+---
+
+### 🔺 Входящие связи (`X --> stress_test_runner`)
+
+| Источник              | Назначение                                     |
+| --------------------- | ---------------------------------------------- |
+| `ci_cd_runner`        | Периодический прогон стресс-наборов            |
+| `cli_shell`           | Ручной запуск стресс-сценариев                 |
+| `access_policies`     | Ограничение, кто может запускать тяжелые тесты |
+| `structured_logger`   | Логирование поведения под нагрузкой            |
+| `flamegraph_profiler` | Снятие CPU/IO профиля при стресс-нагрузке      |
+
+---
+
+### 🧩 Всего связей: **13**
+
+* Исходящие: **8**
+* Входящие: **5**
+
+---
+
+✅ Блок `10.3 Стресс-тесты`:
+
+* Тестирует предельные сценарии (на запись, чтение, компрессию, concurrency);
+* Полностью интегрирован в observability и DevOps;
+* Покрывает основные узкие места: WAL, буферный пул, MVCC, репликация.
 
