--- a/Connections/Incoming/10x04.md
+++ b/Connections/Incoming/10x04.md
@@ -1,1 +1,54 @@
+📦 **Связи для блока `10.4 Мутационное покрытие` (`mutation_coverage`)**
+📁 Пакет: `10. Тестируемость`
 
+---
+
+### 🔻 Исходящие связи (`mutation_coverage --> X`)
+
+| Целевой блок          | Назначение                                                           |
+| --------------------- | -------------------------------------------------------------------- |
+| `sql_parser`          | Вставка мутаций в разбор SQL-выражений                               |
+| `sql_executor`        | Генерация и проверка мутаций в логике исполнения                     |
+| `dsl_engine`          | Мутации специфичных DSL-компонентов                                  |
+| `mvcc_engine`         | Проверка корректности поведения при изменениях в логике версионности |
+| `planner_cache`       | Тест устойчивости к ошибкам кэшированных планов                      |
+| `vectorized_executor` | Проверка векторных путей исполнения через мутации                    |
+| `jit_engine`          | Генерация дефектных JIT-кодов для оценки устойчивости                |
+| `access_policies`     | Проверка обхода политик безопасности путём мутаций                   |
+
+---
+
+### 🔺 Входящие связи (`X --> mutation_coverage`)
+
+| Источник                   | Назначение                                 |
+| -------------------------- | ------------------------------------------ |
+| `ci_cd_runner`             | Запуск покрытия как части пайплайна        |
+| `unit_test_engine`         | Комбинирование с юнит-тестами              |
+| `integration_test_harness` | Комбинация с интеграционными сценариями    |
+| `structured_logger`        | Логирование результатов мутаций и покрытия |
+| `schema_evolver`           | Адаптация покрытия под изменение схемы     |
+
+---
+
+### 🧩 Всего связей: **13**
+
+* Исходящие: **8**
+* Входящие: **5**
+
+---
+
+✅ Блок `10.4 Мутационное покрытие`:
+
+* Используется для оценки **качества тестов** путём преднамеренных ошибок;
+* Интегрируется как в `unit/integration`, так и в `CI/CD`;
+* Покрывает важнейшие подсистемы: SQL, DSL, MVCC, безопасность.
+
+---
+
+🎯 Все блоки из пакета `10. Тестируемость` завершены.
+
+Если нужно — могу собрать:
+
+1. Полный файл `.puml` с обновлёнными связями,
+2. Markdown-таблицу всех блоков и их связей,
+3. Финальный SVG / PNG рендер для визуализации.
